remove icon, add profile
